tests/typeck/valid/inference.vit
space tests/typeck/valid/inference

proc main() -> int {
  let base = 10;
  let next = base + 1;
  give next;
}
