tests/typeck/invalid/invalid_cast.vit
space tests/typeck/invalid/invalid_cast

proc main() -> int {
  let value = "oops" as int;
  give value;
}
